# nebula-software

./: README.md  meson.build
.github/workflows/: build.yaml
data/: meson.build  org.nebula.Software.desktop  org.nebula.Software.desktop.in  org.nebula.Software.gschema.xml
data/icons/: meson.build
po/: POTFILES  en.po  it.po
src/: main.py  meson.build  nebula-software.in  window.py  window.ui
