install_data(
    'hicolor/scalable/apps/org.nebula.Software.svg',
    install_dir: join_paths(get_option('datadir'), 'icons/hicolor/scalable/apps')
)

install_data(
    'hicolor/symbolic/apps/org.nebula.Software-symbolic.svg',
    install_dir: join_paths(get_option('datadir'), 'icons/hicolor/symbolic/apps')
)
