install_data(
    'hicolor/scalable/org.nebula.Software.svg',
    install_dir: join_paths(get_option('datadir'), 'icons/hicolor/scalable/apps')
)

install_data(
    'hicolor/symbolic/org.nebula.Software-symbolic.svg',
    install_dir: join_paths(get_option('datadir'), 'icons/hicolor/symbolic/apps')
)
